--- a/chainRxn/index.html
+++ b/chainRxn/index.html
@@ -9,6 +9,7 @@
             <canvas height="300" width="300" id="main">
                 Your browser doesn't support HTML5 canvas. Get a better one.
             </canvas>
+            <input type="button" value="Replay &#x27f3;" onclick = "G.init()" />
         </div>
         <script src="app.js">
         </script>
